@@ -6,6 +6,8 @@ File: rasterPlot.R
   raster images are not supported. Previously an error would be produced.
 - The function now also works if no high level plot exists,
   i.e. if plot.new() has not been called.
+- Added option 'draw' to control whether the raster plot is to be drawn (TRUE,
+  the default) or returned (FALSE)
 - png plot is initialized with plot.new() instead of the previous
   plot(type = "n", ...) arrangement.
 
